--- a/_config.yml
+++ b/_config.yml
@@ -42,20 +42,29 @@ anchorjs: true # if you want to customize anchor. check out line:181 of `post.ht
 # make sure you have this gem installed
 # `$ gem install jekyll-paginate`
 plugins: [jekyll-paginate]
+gems:
+  - jekyll-pandoc
 
 # Markdown settings
 # replace redcarpet to kramdown,
 # although redcarpet can auto highlight code, the lack of header-id make the catalog impossible, so I switch to kramdown
 # document: http://jekyllrb.com/docs/configuration/#kramdown
-markdown: kramdown
-kramdown:
-  input: GFM # use Github Flavored Markdown !important
-  syntax_highlighter_opts:
-    span:
-      line_numbers: false
-    block:
-      line_numbers: true
-      start_line: 1
+markdown: Pandoc
+pandoc:
+  extensions:
+    - normalize
+    - smart
+    - mathjax
+    - csl: _styles/apa.csl
+    - bibliography: bibliography/references.bib
+# kramdown:
+  # input: GFM # use Github Flavored Markdown !important
+  # syntax_highlighter_opts:
+    # span:
+      # line_numbers: false
+    # block:
+      # line_numbers: true
+      # start_line: 1
 
 # Disqus settings
 disqus_username: fromuly
