--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ gems:
 # replace redcarpet to kramdown,
 # although redcarpet can auto highlight code, the lack of header-id make the catalog impossible, so I switch to kramdown
 # document: http://jekyllrb.com/docs/configuration/#kramdown
-markdown: Pandoc
+markdown: pandoc
 pandoc:
   extensions:
     - normalize
