--- a/_config.yml
+++ b/_config.yml
@@ -41,8 +41,7 @@ anchorjs: true # if you want to customize anchor. check out line:181 of `post.ht
 # from PR#40, to support local preview for Jekyll 3.0
 # make sure you have this gem installed
 # `$ gem install jekyll-paginate`
-plugins: [jekyll-paginate]
-gems:
+plugins: 
   - jekyll-pandoc
 
 # Markdown settings
@@ -57,6 +56,7 @@ pandoc:
     - mathjax
     - csl: _styles/apa.csl
     - bibliography: bibliography/references.bib
+    - citeproc
 # kramdown:
   # input: GFM # use Github Flavored Markdown !important
   # syntax_highlighter_opts:
