--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ plugins:
 # replace redcarpet to kramdown,
 # although redcarpet can auto highlight code, the lack of header-id make the catalog impossible, so I switch to kramdown
 # document: http://jekyllrb.com/docs/configuration/#kramdown
-markdown: pandoc
+markdown: Pandoc
 pandoc:
   extensions:
     - normalize
