--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ anchorjs: true # if you want to customize anchor. check out line:181 of `post.ht
 # from PR#40, to support local preview for Jekyll 3.0
 # make sure you have this gem installed
 # `$ gem install jekyll-paginate`
-plugins: 
+plugins: [jekyll-paginate]
   - jekyll-pandoc
 
 # Markdown settings
