--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ plugins:
 # although redcarpet can auto highlight code, the lack of header-id make the catalog impossible, so I switch to kramdown
 # document: http://jekyllrb.com/docs/configuration/#kramdown
 markdown: Pandoc
-pandoc:
+Pandoc:
   extensions:
     - mathjax
     - citeproc
