--- a/_config.yml
+++ b/_config.yml
@@ -67,10 +67,10 @@ kramdown:
       start_line: 1
 
 # Disqus settings
-disqus_username: fromuly
+disqus_username: 
 
 # Netease settings
-netease_comment: false
+netease_comment: true
 
 # Analytics settings
 # Baidu Analytics
