Update friend link.

--- a/_config.yml
+++ b/_config.yml
@@ -99,6 +99,6 @@ page-mathjax: true
 # Friends
 friends:
   [
-    { title: "Whitney-az", href: "https://whitney-az.github.io/" },
+    { title: "Whitney-az", href: "https://phymani.me/" },
     { title: "PhotonYan", href: "https://photonyan.github.io/" },
   ]
