Update friend links

--- a/_config.yml
+++ b/_config.yml
@@ -101,4 +101,5 @@ friends:
   [
     { title: "Whitney-az", href: "https://phymani.me/" },
     { title: "PhotonYan", href: "https://photonyan.github.io/" },
+    { title: "for_each", href: "https://cwd316.com/"},
   ]
